# FastAPI-Cloud

./: README.md  pyproject.toml
app/: app.py
app/core/exceptions/: file_system.py
app/core/schemes/: node.py  token.py  user.py
app/core/security/: token.py
app/core/services/: node.py  user.py
app/core/settings/: settings.py
app/core/utils/: file_system.py
app/infostructure/api/: __init__.py
app/infostructure/api/routers/: auth.py  node.py  user.py
app/infostructure/authentication/: authentication.py
app/infostructure/db/mongo/: database.py
app/infostructure/db/mongo/models/: node.py
app/infostructure/db/sqlite/: database.py
app/infostructure/db/sqlite/models/: user.py
app/infostructure/dependencies/: current_user.py  repositories.py  services.py
